# Procastinate

./: .gitignore  .mcp.json  README.md  STITCH_MCP.md  dev.sh
backend/: .env.example  .gitignore  config.py  pyproject.toml  seed_demo.py  timeutil.py
backend/agent/: orchestrator.py  tool_executor.py  tools.py
backend/analysis/: insight_generator.py  pattern_analyzer.py
backend/api/: main.py  routes.py
backend/auth/: db.py  models.py  router.py  schemas.py  users.py
backend/cli/: main.py
backend/db/: db.py  schema.sql
backend/llm/: groq_client.py
backend/services/: activity_fetcher.py  checkin_parser.py  checkin_scheduler.py  event_enricher.py  plaintext_watcher.py  session_parser.py  task_poller.py
backend/tests/: conftest.py  test_checkin_parser.py  test_event_enricher.py  test_pattern_analyzer.py  test_session_parser.py  test_sessions.py
docs/superpowers/specs/: 2026-07-09-nl-session-logging-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  AuthContext.jsx  api.js  index.css  main.jsx  motion.js
frontend/src/components/: AnimatedNumber.jsx  AuroraBackground.jsx  AvoidanceChart.jsx  DisplacementDonut.jsx  ProductivityByHour.jsx  Sidebar.jsx  TaskPanel.jsx  TemporalHeatmap.jsx  TriggerEffectiveness.jsx  icons.jsx  ui.jsx
frontend/src/pages/: AuthCallback.jsx  CheckIn.jsx  Dashboard.jsx  Landing.jsx  Login.jsx  Profile.jsx  Query.jsx  Sessions.jsx
