[project]
name = "procrastination-profiler"
version = "0.1.0"
description = "Local-first AI agent that builds a personal model of your procrastination patterns"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "groq>=0.11",
    "scipy>=1.11",
    "numpy>=1.26",
    "apscheduler>=3.10",
    "typer>=0.12",
    "watchdog>=4.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "fastapi-users[sqlalchemy]>=13.0",
    "httpx-oauth>=0.15",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "analysis", "api", "auth", "cli", "db", "llm", "services"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
